# short-long-polling-python

./: long_poll_client.py  main.py  pyproject.toml  readme.md  short_poll_client.py
