[tool.poetry]
name = "short-long-polling"
version = "0.1.0"
description = ""
authors = ["IlyaKalosha1 <ikalosha@remedypointsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
